llvm/test/tools/llubi/lib_nobuiltin.ll
; NOTE: Assertions have been autogenerated by utils/update_llubi_test_checks.py UTC_ARGS: --version 6
; RUN: not llubi --verbose < %s 2>&1 | FileCheck %s

declare void @exit(i32) noreturn nobuiltin

define i32 @main() {
  call void @exit(i32 42)

  ret i32 0
}
; CHECK: Entering function: main
; CHECK-NEXT: Unrecognized instruction:   call void @exit(i32 42)
; CHECK-NEXT: error: Execution of function 'main' failed.
